--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.3.4
 Django==3.2.4
 greenlet==1.1.0
 msgpack==1.0.2
+pkg-resources==0.0.0
 psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pynvim==0.4.3
 pytz==2021.1
 sqlparse==0.4.1
