--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 asgiref==3.3.4
+dj-database-url==0.5.0
 Django==3.2.4
 django-widget-tweaks==1.4.8
 greenlet==1.1.0
+gunicorn==20.1.0
 msgpack==1.0.2
 pkg-resources==0.0.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pynvim==0.4.3
+python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
 Unipath==1.1
+whitenoise==5.3.0
